--- a/app/src/main/res/layout/fragment_screen_slide_page.xml
+++ b/app/src/main/res/layout/fragment_screen_slide_page.xml
@@ -9,5 +9,6 @@
         android:id="@+id/image_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#0000"
         android:layout_centerInParent="true"/>
 </RelativeLayout>
