--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:id="@+id/main_container"
     tools:context=".MainActivity">
 
     <Button
@@ -24,6 +25,6 @@
         android:layout_below="@+id/start_game_button"
         android:text="Refresh"
         android:id="@+id/refresh_button"
-        android:onClick="refresh"/>
+        android:onClick="onRefreshClicked"/>
 
 </RelativeLayout>
