--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -4,8 +4,8 @@
 
     <CheckBoxPreference
         android:key="pref_wifi_only"
-        android:title="Download over WiFi"
-        android:summary="Allow images to download over WiFi only"
+        android:title="Download over WiFi only"
+        android:summary="Prevent downloading images from mobile data"
         android:defaultValue="true" />
 
 </PreferenceScreen>
