--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_centerInParent="true"
-        android:text="Start"
+        android:text="@string/start_game_button"
         android:id="@+id/start_game_button"
         android:onClick="onStartClicked"/>
 
