--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/start_game_button"
-        android:text="Refresh"
+        android:text="@string/refresh_button"
         android:id="@+id/refresh_button"
         android:onClick="onRefreshClicked"/>
 
