--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -13,4 +13,12 @@
         android:id="@+id/result_text"
         android:layout_centerInParent="true"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onPlayAgainClicked"
+        android:layout_below="@+id/result_text"
+        android:layout_centerHorizontal="true"
+        android:text="@string/play_again_button"/>
+
 </RelativeLayout>
