--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -7,11 +7,18 @@
     tools:context="com.example.george.guessthepicture.ResultActivity">
 
     <TextView
-        android:text="@string/hello_world"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/result_text"
+        android:text="@string/present_score_text"/>
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/result_text"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:textAppearance="@android:style/TextAppearance.Large"/>
 
     <Button
         android:layout_width="wrap_content"
